    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
28-Jun-2004
   Problems fixed:
       1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.
       2. bug #957882: URL path elements containing leading '.' were being stripped of those periods.

27-Jun-2004
   Thanks to Fabrizio Giustina for adding an entity-resolver to support local use of ServletUnit with a regular web.xml

   Additions:
       1. patch #915296: Local copies of the 2.2 and 2.3 web.xml dtds are now consulted if specified, rather than connecting to
          the Sun website.
       2. HTMLElement now supports a getText() method to return the text contents of any element
       3. WebResponse now supports getTextBlocks and getFirstMatchingTextBlock to retrieve headers and paragraphs from a page.

25-Jun-2004
   Problems fixed:
       1. bug #960307 meta tags within <noscript> tags were not being ignored when scripting was disabled

24-Jun-2004
   Problems fixed:
       1. bug #978770 Clicking on a button outside of a form is now supported
       2. bug #838947 Document.getElementById now returns null if no such element exists

23-Jun-2004
   Problems fixed:
       1. bug #974380 When using a DNS listener, host header no longer includes ':-1' if the port is not specified

22-Jun-2004
   Problems fixed:
       1. bug #964940 The Referer header was not being sent again if the original request was redirected

21-Jun-2004
   Problems fixed:
       1. bug #974675 Javascript function Window.open did not honor "_self" tag for window name.

18-Jun-2004
   Additions: