@@ -49,6 +49,11 @@ import org.xml.sax.SAXException;
 abstract
 public class WebResponse implements HTMLSegment, CookieSource {
 
+    final private static String HTML_CONTENT  = "text/html";
+    final private static String XHTML_CONTENT = "text/xhtml";
+
+    final private static int UNINITIALIZED_INT = -2;
+
     private FrameSelector _frame;
 
     private String  _baseTarget;
@@ -71,7 +76,7 @@ public class WebResponse implements HTMLSegment, CookieSource {
      * Returns true if the response is HTML.
      **/
     public boolean isHTML() {
-        return getContentType().equalsIgnoreCase( HTML_CONTENT );
+        return getContentType().equalsIgnoreCase( HTML_CONTENT ) || getContentType().equalsIgnoreCase( XHTML_CONTENT );
     }
 
 
@@ -874,10 +879,6 @@ public class WebResponse implements HTMLSegment, CookieSource {
 
 //--------------------------------- private members --------------------------------------
 
-
-    final private static String HTML_CONTENT = "text/html";
-
-    final private static int UNINITIALIZED_INT = -2;
 
     private WebWindow _window;
 
