@@ -14,6 +14,9 @@ Limitations:
 
 Revision History:
 28-Jun-2004
+   Additions:
+       1. rfe #901172 "text/xhtml" is now recognized as a valid HTML "content-type"
+
    Problems fixed:
        1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.
        2. bug #957882: URL path elements containing leading '.' were being stripped of those periods.
